--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,17 @@ header {
   color: #E1E1E1;
   background-color: #141414;
 }
-h1, .links li {
-    display: inline-block;
+h1 {
     margin-left: 20px;
+    font-size: 25px;
 }
 .links ul {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10px;
     margin-right: 20px;
 }
+.links li {list-style: none;}
 .links a {
     text-decoration: none;
     color: #E1E1E1;
