--- a/css/style.css
+++ b/css/style.css
@@ -7,63 +7,66 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Montserrat, sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 body {
     background-color: #F3F3F3;
 }
-@media screen {
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        color: #E1E1E1;
-        background-color: #141414;
-    }
-    h1 {
-    margin-left: 20px;
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #E1E1E1;
+    background-color: #141414;
+}
+h1 {
     font-weight: 900;
+    margin-inline-start: 20px;
+}
+.links ul {
+display: flex;
+justify-content: space-evenly;
+gap: 10px;
+margin-inline-end: 20px;
+
+}
+.links a:hover {
+    opacity: 0.8;
+}
+.links li {list-style: none;}
+.links a {
+text-decoration: none;
+color: #E1E1E1;
+}
+
+@media screen and (max-width: 319px) {
+    h1 {
+    margin-inline-start: 5px;
+    font-size: 15px;
     }
     .links ul {
-    display: flex;
-    justify-content: space-evenly;
     gap: 10px;
-    margin-right: 20px;
-    }
-    .links li {list-style: none;}
-    .links a {
-    text-decoration: none;
-    color: #E1E1E1;
-    }
-    .links a:hover {
-    opacity: 0.8;
+    margin-inline-end: 5px;
+    font-size: 9px;
     }
 }
-@media screen and (max-width: 480px){
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        color: #E1E1E1;
-        background-color: #141414;
-    }
+@media screen and (min-width:320px) and (max-width: 480px){
     h1 {
-    margin-left: 5px;
-    font-size: 18px;
-    font-weight: 900;
+    margin-inline-start: 5px;
+    font-size: 20px;
     }
     .links ul {
-    display: flex;
-    justify-content: space-evenly;
     gap: 10px;
-    margin-right: 5px;
+    margin-inline-end: 5px;
+    font-size: 10px;
     }
-    .links li {list-style: none;}
-    .links a {
-    text-decoration: none;
-    color: #E1E1E1;
+}
+@media screen and (min-width:769px) and (max-width: 1024px){
+    h1 {
+    margin-inline-start: 20px;
     }
-    .links a:hover {
-    opacity: 0.8;
+    .links ul {
+    gap: 10px;
+    margin-inline-end: 20px;
     }
 }
