--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 5px 0px;
     color: #E1E1E1;
     background-color: #141414;
 }
@@ -40,6 +41,9 @@ color: #E1E1E1;
 }
 
 @media screen and (max-width: 319px) {
+    header {
+        padding: 3px 0px;
+    }
     h1 {
     margin-inline-start: 5px;
     font-size: 15px;
@@ -51,6 +55,9 @@ color: #E1E1E1;
     }
 }
 @media screen and (min-width:320px) and (max-width: 480px){
+    header {
+        padding: 5px 0px;
+    }
     h1 {
     margin-inline-start: 5px;
     font-size: 20px;
@@ -62,6 +69,9 @@ color: #E1E1E1;
     }
 }
 @media screen and (min-width:769px) and (max-width: 1024px){
+    header {
+        padding: 5px 0px;
+    }
     h1 {
     margin-inline-start: 20px;
     }
